Closed
Bug 806209
Opened 13 years ago
Closed 13 years ago
NS_StackWalk is not threadsafe
Categories
(Core :: Gecko Profiler, defect)
Tracking
()
RESOLVED
FIXED
mozilla19
People
(Reporter: neil, Assigned: ehsan.akhgari)
Details
Attachments
(1 file)
|
3.14 KB,
patch
|
BenWa
:
review+
|
Details | Diff | Splinter Review |
The Gecko Profiler tries to use NS_StackWalk to get a backtrace on the suspended main thread. Unfortunately if the thread is suspended in fprintf then when NS_StackWalk tries to fprintf then the application deadlocks.
| Assignee | ||
Comment 1•13 years ago
|
||
Yeah, we should make NS_StackWalk not printf.
| Assignee | ||
Comment 2•13 years ago
|
||
Comment 3•13 years ago
|
||
Thanks ehsan. Land it!
Updated•13 years ago
|
Attachment #676218 -
Flags: review?(bgirard) → review+
| Assignee | ||
Comment 4•13 years ago
|
||
| Assignee | ||
Comment 5•13 years ago
|
||
Fixed a stupid mistake: https://hg.mozilla.org/integration/mozilla-inbound/rev/26095585dc5b
Comment 6•13 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/3b340e47ccbc
https://hg.mozilla.org/mozilla-central/rev/26095585dc5b
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
You need to log in
before you can comment on or make changes to this bug.
Description
•