Bug 806209 followup - fix a stupid mistake; irc-r=BenWa