xpcom/base/nsStackWalk.cpp
@@ -306,8 +306,10 @@ WalkStackMain64(struct WalkStackData* data)
     // Get a context for the specified thread.
     memset(&context, 0, sizeof(CONTEXT));
     context.ContextFlags = CONTEXT_FULL;
-    if (!GetThreadContext(myThread, &context) && data->walkCallingThread) {
-        PrintError("GetThreadContext");
+    if (!GetThreadContext(myThread, &context)) {
+        if (data->walkCallingThread) {
+            PrintError("GetThreadContext");
+        }
         return;
     }
 
